Add many argon component

--- a/assets/scss/argon-dashboard/_navbar-vertical.scss
+++ b/assets/scss/argon-dashboard/_navbar-vertical.scss
@@ -301,7 +301,7 @@
       > .nav-item {
         .nav-link {
           &.active {
-            background-color: #f6f9fc;
+            background-color: #d2dbe4;
             box-shadow: none;
           }
         }
