--- a/assets/scss/argon-dashboard/_variables.scss
+++ b/assets/scss/argon-dashboard/_variables.scss
@@ -121,7 +121,7 @@ $theme-gradient-colors: (
   "dark":       ($dark-gradient, $dark-gradient-state)
 ) !default;
 
-// Set a specific jump point for requesting color jumps
+// Lesson a specific jump point for requesting color jumps
 $theme-color-interval:        8% !default;
 
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
@@ -382,7 +382,7 @@ $container-max-widths: (
 
 // Grid columns
 //
-// Set the number of columns and specify the width of the gutters.
+// Lesson the number of columns and specify the width of the gutters.
 
 $grid-columns:                12 !default;
 $grid-gutter-width:           1.5rem !default;
@@ -708,8 +708,8 @@ $btn-padding-x:               1.25rem !default;
 $btn-font-family:             $input-btn-font-family !default;
 $btn-font-size:               $text-sm-font-size !default;
 $btn-line-height:             $input-btn-line-height !default;
-$btn-white-space:             null !default; // Set to `nowrap` to prevent text wrapping
-$btn-letter-spacing:          .025rem !default; // Set to `nowrap` to prevent text wrapping
+$btn-white-space:             null !default; // Lesson to `nowrap` to prevent text wrapping
+$btn-letter-spacing:          .025rem !default; // Lesson to `nowrap` to prevent text wrapping
 
 $btn-margin-bottom:           1rem !default;
 
