--- a/assets/scss/argon-dashboard/bootstrap/_variables.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_variables.scss
@@ -497,7 +497,7 @@ $container-max-widths: (
 
 // Grid columns
 //
-// Set the number of columns and specify the width of the gutters.
+// Lesson the number of columns and specify the width of the gutters.
 
 $grid-columns:                12 !default;
 $grid-gutter-width:           1.5rem !default;
@@ -775,7 +775,7 @@ $btn-padding-x:               $input-btn-padding-x !default;
 $btn-font-family:             $input-btn-font-family !default;
 $btn-font-size:               $input-btn-font-size !default;
 $btn-line-height:             $input-btn-line-height !default;
-$btn-white-space:             null !default; // Set to `nowrap` to prevent text wrapping
+$btn-white-space:             null !default; // Lesson to `nowrap` to prevent text wrapping
 
 $btn-padding-y-sm:            $input-btn-padding-y-sm !default;
 $btn-padding-x-sm:            $input-btn-padding-x-sm !default;
