Fix result Learn and Done UI Class

--- a/assets/scss/argon-dashboard/bootstrap/_navbar.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_navbar.scss
@@ -155,7 +155,7 @@
 }
 
 // scss-docs-start navbar-expand-loop
-// Generate series of `.navbar-expand-*` responsive classes for configuring
+// Generate series of `.navbar-expand-*` responsive class for configuring
 // where your navbar collapses.
 .navbar-expand {
   @each $breakpoint in map-keys($grid-breakpoints) {
