--- a/assets/scss/argon-dashboard/bootstrap/_tables.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_tables.scss
@@ -140,7 +140,7 @@
 
 // Responsive tables
 //
-// Generate series of `.table-responsive-*` classes for configuring the screen
+// Generate series of `.table-responsive-*` class for configuring the screen
 // size of where your table will overflow.
 
 @each $breakpoint in map-keys($grid-breakpoints) {
