--- a/assets/scss/argon-dashboard/bootstrap/forms/_form-control.scss
+++ b/assets/scss/argon-dashboard/bootstrap/forms/_form-control.scss
@@ -137,7 +137,7 @@
 
 // Form control sizing
 //
-// Build on `.form-control` with modifier classes to decrease or increase the
+// Build on `.form-control` with modifier class to decrease or increase the
 // height and font-size of form controls.
 //
 // Repeated in `_input_group.scss` to avoid Sass extend issues.
