--- a/assets/scss/argon-dashboard/bootstrap/_alert.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_alert.scss
@@ -41,7 +41,7 @@
 
 
 // scss-docs-start alert-modifiers
-// Generate contextual modifier classes for colorizing the alert.
+// Generate contextual modifier class for colorizing the alert.
 
 @each $state, $value in $theme-colors {
   $alert-background: shift-color($value, $alert-bg-scale);
