--- a/assets/scss/argon-dashboard/bootstrap/_list-group.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_list-group.scss
@@ -159,7 +159,7 @@
 // scss-docs-start list-group-modifiers
 // List group contextual variants
 //
-// Add modifier classes to change text and background color on individual items.
+// Add modifier class to change text and background color on individual items.
 // Organizationally, this must come after the `:hover` states.
 
 @each $state, $value in $theme-colors {
