--- a/assets/scss/argon-dashboard/_variables.scss
+++ b/assets/scss/argon-dashboard/_variables.scss
@@ -330,7 +330,7 @@ $link-color:                              $primary !default;
 $link-decoration:                         none !default;
 $link-hover-color:                        darken($link-color, 15%) !default;
 $link-hover-decoration:                   none !default;
-// Darken percentage for links with `.text-*` class (e.g. `.text-success`)
+// Darken percentage for links with `.text-*` class.js (e.g. `.text-success`)
 $emphasized-link-hover-darken-percentage: 15% !default;
 
 $stretched-link-pseudo-element:           after !default;
