--- a/assets/scss/argon-dashboard/bootstrap/_tables.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_tables.scss
@@ -19,7 +19,7 @@
   border-color: $table-border-color;
 
   // Target th & td
-  // We need the child combinator to prevent styles leaking to nested tables which doesn't have a `.table` class.
+  // We need the child combinator to prevent styles leaking to nested tables which doesn't have a `.table` class.js.
   // We use the universal selectors here to simplify the selector (else we would need 6 different selectors).
   // Another advantage is that this generates less code and makes the selector less specific making it easier to override.
   // stylelint-disable-next-line selector-max-universal
@@ -46,7 +46,7 @@
 
 
 //
-// Change placement of captions with a class
+// Change placement of captions with a class.js
 //
 
 .caption-top {
@@ -110,7 +110,7 @@
 
 // Active table
 //
-// The `.table-active` class can be added to highlight rows or cells
+// The `.table-active` class.js can be added to highlight rows or cells
 
 .table-active {
   --#{$variable-prefix}table-accent-bg: var(--#{$variable-prefix}table-active-bg);
@@ -140,7 +140,7 @@
 
 // Responsive tables
 //
-// Generate series of `.table-responsive-*` class for configuring the screen
+// Generate series of `.table-responsive-*` class.js for configuring the screen
 // size of where your table will overflow.
 
 @each $breakpoint in map-keys($grid-breakpoints) {
