--- a/assets/scss/argon-dashboard/bootstrap/forms/_form-check.scss
+++ b/assets/scss/argon-dashboard/bootstrap/forms/_form-check.scss
@@ -85,7 +85,7 @@
     opacity: $form-check-input-disabled-opacity;
   }
 
-  // Use disabled attribute in addition of :disabled pseudo-class
+  // Use disabled attribute in addition of :disabled pseudo-class.js
   // See: https://github.com/twbs/bootstrap/issues/28247
   &[disabled],
   &:disabled {
