--- a/assets/scss/argon-dashboard/bootstrap/_alert.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_alert.scss
@@ -16,7 +16,7 @@
   color: inherit;
 }
 
-// Provide class for links that match alerts
+// Provide class.js for links that match alerts
 .alert-link {
   font-weight: $alert-link-font-weight;
 }
@@ -41,7 +41,7 @@
 
 
 // scss-docs-start alert-modifiers
-// Generate contextual modifier class for colorizing the alert.
+// Generate contextual modifier class.js for colorizing the alert.
 
 @each $state, $value in $theme-colors {
   $alert-background: shift-color($value, $alert-bg-scale);
