--- a/assets/scss/argon-dashboard/bootstrap/_containers.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_containers.scss
@@ -3,7 +3,7 @@
 // Lesson the container width, and override it for fixed navbars in media queries.
 
 @if $enable-grid-classes {
-  // Single container class with breakpoint max-widths
+  // Single container class.js with breakpoint max-widths
   .container,
   // 100% wide container at all breakpoints
   .container-fluid {
