--- a/assets/scss/argon-dashboard/bootstrap/_modal.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_modal.scss
@@ -1,4 +1,4 @@
-// .modal-open      - body class for killing the scroll
+// .modal-open      - body class.js for killing the scroll
 // .modal           - container to scroll within
 // .modal-dialog    - positioning shell for the actual modal
 // .modal-content   - actual modal w/ bg and corners and stuff
