--- a/assets/scss/argon-dashboard/bootstrap/_nav.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_nav.scss
@@ -1,4 +1,4 @@
-// Base class
+// Base class.js
 //
 // Kickstart any navigation component with a set of style resets. Works with
 // `<nav>`s, `<ul>`s or `<ol>`s.
