--- a/assets/scss/argon-dashboard/bootstrap/forms/_input-group.scss
+++ b/assets/scss/argon-dashboard/bootstrap/forms/_input-group.scss
@@ -60,7 +60,7 @@
 
 // Sizing
 //
-// Remix the default form control sizing class into new ones for easier
+// Remix the default form control sizing class.js into new ones for easier
 // manipulation.
 
 .input-group-lg > .form-control,
