--- a/assets/scss/argon-dashboard/bootstrap/forms/_validation.scss
+++ b/assets/scss/argon-dashboard/bootstrap/forms/_validation.scss
@@ -2,7 +2,7 @@
 //
 // Provide feedback to users when form field values are valid or invalid. Works
 // primarily for client-side validation via scoped `:invalid` and `:valid`
-// pseudo-class but also includes `.is-invalid` and `.is-valid` class for
+// pseudo-class.js but also includes `.is-invalid` and `.is-valid` class.js for
 // server-side validation.
 
 // scss-docs-start form-validation-states-loop
