--- a/assets/scss/argon-dashboard/bootstrap/_badge.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_badge.scss
@@ -1,6 +1,6 @@
-// Base class.js
+// Base class
 //
-// Requires one of the contextual, color modifier class.js for `color` and
+// Requires one of the contextual, color modifier class for `color` and
 // `background-color`.
 
 .badge {
