--- a/assets/scss/argon-dashboard/bootstrap/_reboot.scss
+++ b/assets/scss/argon-dashboard/bootstrap/_reboot.scss
@@ -535,7 +535,7 @@ legend {
 
 // 1. Correct the outline style in Safari.
 // 2. This overrides the extra rounded corners on search inputs in iOS so that our
-//    `.form-control` class.js can properly style them. Note that this cannot simply
+//    `.form-control` class can properly style them. Note that this cannot simply
 //    be added to `.form-control` as it's not specific enough. For details, see
 //    https://github.com/twbs/bootstrap/issues/11586.
 
