--- a/assets/scss/argon-dashboard/bootstrap/mixins/_visually-hidden.scss
+++ b/assets/scss/argon-dashboard/bootstrap/mixins/_visually-hidden.scss
@@ -18,7 +18,7 @@
 }
 
 // Use to only display content when it's focused, or one of its child elements is focused
-// (i.e. when focus is within the element/container that the class.js was applied to)
+// (i.e. when focus is within the element/container that the class was applied to)
 //
 // Useful for "Skip to main content" links; see https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
 
