--- a/resources/css/nucleo-icons.css
+++ b/resources/css/nucleo-icons.css
@@ -13,7 +13,7 @@ License - nucleoapp.com/license/
 }
 
 /*------------------------
-    base class.js definition
+    base class definition
 -------------------------*/
 .ni {
   display: inline-block;
@@ -594,4 +594,4 @@ License - nucleoapp.com/license/
 }
 
 
-/* all icon font class.js list here */
+/* all icon font class list here */
